vlib/v/checker/tests/float_modulo_err.vv
fn main() {
	println(3.0 % 2.0)
	println(f32(3.0) % f32(2.0))
}
